--- a/src/main/resources/templates/consultarTematica.html
+++ b/src/main/resources/templates/consultarTematica.html
@@ -41,7 +41,7 @@
                     <img src="imagen.jpg" alt="Imagen">
                 </div>
             </div>
-            <div><script src="scriptConsularTematica.js"></script></div>
+            <div><script src="scriptConsultarTematica.js"></script></div>
         </form>
     </body>
 </html>
