--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,20 @@
-<!DOCTYPE html > <!-- El tipo de version de html se usa-->
-<html >
-    <head>
-        <title>Potencializando el uso de la inteligencia</title>
-    </head>
-    <body>
-        <a href="menu.html"> Iniciar sesion </a> <!-- para abrir otras ventanas -->
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iniciar sesión</title>
+    <link rel="stylesheet" href="estiloIndex.css">
+</head>
+<body>
+<div class="container">
+    <h1>Iniciar sesión</h1>
+    <form id="formularioCorreo">
+        <input type="email" id="correo" name="correo" placeholder="Ingrese su correo" required>
+        <button type="submit">Validar</button>
+    </form>
+</div>
+
+<script src="scriptIndex.js"></script>
+</body>
 </html>
