--- a/src/main/resources/templates/consultarTematica.html
+++ b/src/main/resources/templates/consultarTematica.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Registrar una tematica</title>
-        <link rel="stylesheet" href="estiloConsultarTematica.css">
+
     </head>
     <body>
         <form id="formularioRegistro">
@@ -22,12 +22,13 @@
                 <label for="opciones">Seleccione la temática:</label>
                 <select id="opciones"> 
                 </select>
-                <script src="scriptRegistrarTexto.js"></script>
                 
                 <label for="opcionesTexto">Seleccione el texto correspondiente a la temática seleccionada:</label>
-                <select id="opcionesTexto"> 
+                <select id="opcionesTexto">
+                    <option value="1">Cuando se descubrió america</option>
+                    <option value="2">Texto 2</option>
+                    <option value="3">Texto 3</option>
                 </select>
-                <script src="ejemplo.js"></script>
             </div>
             <div class="botones">
                 <button onclick="generarAudios()">Generar audios</button>
@@ -36,11 +37,9 @@
                 <button onclick="generarPalabrasClave()">Generar palabras clave</button>
                 <button onclick="enviarPDF()">Enviar PDF</button>
                 <button onclick="generarWordCloud()">Generar WordCloud</button>
-                <div class="overlay" id="overlay">
-                    <span class="close-btn" onclick="cerrarImagen()">&times;</span>
-                    <img src="imagen.jpg" alt="Imagen">
-                </div>
+
             </div>
+            <textarea id="resultadoContainer" rows="4" cols="50"></textarea>
             <div><script src="scriptConsultarTematica.js"></script></div>
         </form>
     </body>
