--- a/src/main/resources/templates/consultarTematica.html
+++ b/src/main/resources/templates/consultarTematica.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Registrar una tematica</title>
+        <link rel = "stylesheet" href="estiloConsultarTematica.css">
 
     </head>
     <body>
@@ -37,9 +38,7 @@
                 <button onclick="generarPalabrasClave()">Generar palabras clave</button>
                 <button onclick="enviarPDF()">Enviar PDF</button>
                 <button onclick="generarWordCloud()">Generar WordCloud</button>
-
             </div>
-            <textarea id="resultadoContainer" rows="4" cols="50"></textarea>
             <div><script src="scriptConsultarTematica.js"></script></div>
         </form>
     </body>
