--- a/src/main/resources/templates/consultarUsuarios.html
+++ b/src/main/resources/templates/consultarUsuarios.html
@@ -26,7 +26,7 @@
             <th>Nombre</th>
             <th>Correo</th>
             <th>Número de Teléfono</th>
-            <th>Imagen</th>
+            <th>Foto</th>
         </tr>
         </thead>
         <tbody id="tbodyUsuarios">
