--- a/src/main/resources/templates/registrarTexto.html
+++ b/src/main/resources/templates/registrarTexto.html
@@ -26,14 +26,15 @@
                   <select id="opciones"> 
                       
                   </select>
-                  <script src="scriptRegistrarTexto.js"></script>
+                <script src="scriptTexto.js"></script>
                 <div> <p>Si la temática de la cual se trata el texto no se encuentra, puede registrarla mediante el siguiente botón:</p> </div>
-                <div> <a href="RegistrarTematica.html" target="_blank" class="boton-registro">Registrar temática</a> </div>
+                <div> <a href="registrarTematica.html" target="_blank" class="boton-registro">Registrar temática</a> </div>
                 <div> <p>Ingrese el texto que desea registar:</p> </div>
                 <div class="form_input"> <textarea name="textoTematica" placeholder="Ingrese el texto" required> </textarea> </div>  
                 <button type="submit" id="btnRegistrarTxt">Registrar</button>
+            
             </div>
-        </form>       
+        </form>
     </body>
 </html>
 
