--- a/src/main/resources/templates/estiloRegistrarTexto.css
+++ b/src/main/resources/templates/estiloRegistrarTexto.css
@@ -58,8 +58,9 @@ form{
     margin-bottom: 10px; 
     font-size:  16px;
 }
-textarea{
-    min-width: 100%;
+input{
+    font-size:  18px;
+    width: 100%;
     box-sizing: border-box;
     padding: 6px 12px;
     border: none;
