--- a/src/main/resources/templates/consultarTematica.html
+++ b/src/main/resources/templates/consultarTematica.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Consultar temáticas y textos</title>
-    <link rel="stylesheet" href="estiloConsultarTematica.css">
+    <title>Registrar una tematica</title>
+
+
 </head>
 <body>
 <form id="formularioRegistro">
@@ -20,11 +21,12 @@
 
     <div class="datos">
         <label for="opciones">Seleccione la temática:</label>
-        <select id="opciones"></select>
+        <select id="opciones">
+        </select>
 
         <label for="opcionesTexto">Seleccione el texto correspondiente a la temática seleccionada:</label>
         <select id="opcionesTexto">
-            <option value="1">Cuando se descubrió América</option>
+            <option value="1">Cuando se descubrió america</option>
             <option value="2">Texto 2</option>
             <option value="3">Texto 3</option>
         </select>
@@ -36,9 +38,11 @@
         <button onclick="generarPalabrasClave()">Generar palabras clave</button>
         <button onclick="enviarPDF()">Enviar PDF</button>
         <button onclick="generarWordCloud()">Generar WordCloud</button>
+        <button onclick="mostrarRespuestaChatGPT()">Ver Chat GPT</button>
+        <button onclick="mostrarRespuestaSentimiento()">Ver Sentimiento</button>
+        <button onclick="mostrarRespuestaPalabrasClave()">Ver Palabras Clave</button>
     </div>
-    <!-- Agregamos la referencia al archivo JavaScript -->
-    <script src="scriptConsultarTematica.js"></script>
+    <div><script src="scriptConsultarTematica.js"></script></div>
 </form>
 </body>
 </html>
