--- a/src/main/resources/templates/consultarTematica.html
+++ b/src/main/resources/templates/consultarTematica.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Registrar una tematica</title>
-
-
+    <link rel="stylesheet" href="estiloConsultarTematica.css">
+    <script src="scriptConsultarTematica.js"></script>
 </head>
 <body>
 <form id="formularioRegistro">
@@ -26,9 +26,6 @@
 
         <label for="opcionesTexto">Seleccione el texto correspondiente a la temática seleccionada:</label>
         <select id="opcionesTexto">
-            <option value="1">Cuando se descubrió america</option>
-            <option value="2">Texto 2</option>
-            <option value="3">Texto 3</option>
         </select>
     </div>
     <div class="botones">
