--- a/src/main/resources/templates/consultarTematica.html
+++ b/src/main/resources/templates/consultarTematica.html
@@ -29,15 +29,16 @@
         </select>
     </div>
     <div class="botones">
-        <button onclick="generarAudios()">Generar audios</button>
-        <button onclick="consultarChatGPT()">Consultar ChatGPT</button>
-        <button onclick="consultarSentimiento()">Consultar Sentimiento</button>
-        <button onclick="generarPalabrasClave()">Generar palabras clave</button>
-        <button onclick="enviarPDF()">Enviar PDF</button>
-        <button onclick="generarWordCloud()">Generar WordCloud</button>
+        <button onclick="consultarChatGPT()">Generar ChatGPT</button>
+        <button onclick="consultarSentimiento()">Generar Sentimiento</button>
         <button onclick="mostrarRespuestaChatGPT()">Ver Chat GPT</button>
         <button onclick="mostrarRespuestaSentimiento()">Ver Sentimiento</button>
+        <button onclick="generarPalabrasClave()">Generar palabras clave</button>
+        <button onclick="generarWordCloud()">Generar WordCloud</button>
         <button onclick="mostrarRespuestaPalabrasClave()">Ver Palabras Clave</button>
+        <button onclick="verWordCloud()">Ver WordCloud</button>
+        <button onclick="enviarPDF()">Enviar PDF</button>
+        <button onclick="generarAudios()">Generar audios</button>
     </div>
     <div><script src="scriptConsultarTematica.js"></script></div>
 </form>
