update commit final

--- a/src/main/resources/templates/consultarTematica.html
+++ b/src/main/resources/templates/consultarTematica.html
@@ -28,6 +28,42 @@
         <select id="opcionesTexto">
         </select>
     </div>
+    <div class="txt">
+        <label> Datos asociados al texto seleccionado: </label>
+    </div>
+
+
+    <div class="container">
+        <form>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="id">Id:</label><br>
+                    <textarea id="id" name="id_txt" rows="2" cols="40"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="tematica">Temática asociada:</label><br>
+                    <textarea id="tematica" name="tem_txt" rows="2" cols="40"></textarea>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="fecha">Fecha de registro:</label><br>
+                    <textarea id="fecha" name="fecha_txt" rows="2" cols="40"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="cant">Cantidad de palabras:</label><br>
+                    <textarea id="cant" name="cant_txt" rows="2" cols="40"></textarea>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="cont">Contenido:</label><br>
+                    <textarea id="cont" name="contenido_txt" rows="4" cols="40"></textarea>
+                </div>
+
+            </div>
+        </form>
+    </div>
     <div class="botones">
         <button onclick="consultarChatGPT()">Generar ChatGPT</button>
         <button onclick="consultarSentimiento()">Generar Sentimiento</button>
