--- a/src/main/resources/templates/estiloConsultarTematica.css
+++ b/src/main/resources/templates/estiloConsultarTematica.css
@@ -108,3 +108,24 @@ button:hover{
     font-size: 24px;
 }
 
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.form-row {
+    display: flex;
+    width: 100%;
+    margin-bottom: 10px;
+
+    .form-group {
+        flex: 1;
+        margin-right: 10px;
+    }
+
+    textarea {
+        width: 100%;
+        box-sizing: border-box;
+        margin-top: 5px;
+    }
+}
