--- a/src/main/resources/templates/consultarTematica.html
+++ b/src/main/resources/templates/consultarTematica.html
@@ -73,8 +73,10 @@
         <button onclick="generarWordCloud()">Generar WordCloud</button>
         <button onclick="mostrarRespuestaPalabrasClave()">Ver Palabras Clave</button>
         <button onclick="verWordCloud()">Ver WordCloud</button>
+        <button onclick="generarAudio()">Generar audios</button>
         <button onclick="enviarPDF()">Enviar PDF</button>
-        <button onclick="generarAudios()">Generar audios</button>
+        <button onclick="mostrarAudio()">Reproducir audio</button>
+
     </div>
     <div><script src="scriptConsultarTematica.js"></script></div>
 </form>
