--- a/src/main/resources/templates/datosTematicas.html
+++ b/src/main/resources/templates/datosTematicas.html
@@ -3,38 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Consultar usuarios</title>
+    <title>Datos registrados de las tematicas</title>
     <link rel="stylesheet" href="estiloConsultarUsuarios.css">
 </head>
 <body>
 <div class="cuadroTitulo">
-    <h1>Consultar usuarios</h1>
+    <h1>Consultar Tematicas</h1>
     <ul>
         <li><a href="registrarTematica.html">Registrar temática</a></li>
         <li><a href="registrarTexto.html">Registrar texto</a></li>
         <li><a href="consultarTematica.html">Consultas con temática</a></li>
-        <li><a href="datosTematicas.html">Consultar temática</a></li>
+        <li><a href="consultarTematica.html">Consultar temática</a></li>
         <li><a href="menu.html">Menú principal</a></li>
     </ul>
 </div>
 
 <div class="container">
-    <table id="tablaUsuarios">
+    <table id="tablaTematicas">
         <thead>
         <tr>
             <th>id</th>
-            <th>Identificación</th>
             <th>Nombre</th>
-            <th>Correo</th>
-            <th>Número de Teléfono</th>
+            <th>Descripción</th>
             <th>Foto</th>
         </tr>
         </thead>
-        <tbody id="tbodyUsuarios">
+        <tbody id="tbodyTematica">
         </tbody>
     </table>
 </div>
 
-<script src="scriptConsultarUsuarios.js"></script>
+<script src="scriptDatosTematica.js"></script>
 </body>
 </html>
