--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -12,8 +12,9 @@
             <div class="menu">
               <a href="registrarTematica.html" class="cuadro">Registrar temática</a>
               <a href="registrarTexto.html" class="cuadro">Registrar texto</a>
-              <a href="consultarTematica.html" class="cuadro">Consultar temática</a>
+              <a href="consultarTematica.html" class="cuadro">Consultas con temáticas</a>
               <a href="consultarUsuarios.html" class="cuadro">Consultar usuarios</a>
+              <a href="datosTematicas.html" class="cuadro">Consultar temáticas</a>
             </div>                
         </form>
     </body>
