--- a/src/main/resources/templates/registrarTexto.html
+++ b/src/main/resources/templates/registrarTexto.html
@@ -12,7 +12,8 @@
         <h1>Registrar nuevo texto</h1>
         <ul>
             <li><a href="registrarTematica.html">Registrar temática</a></li>
-            <li><a href="consultarTematica.html">Consultar temática</a></li>
+            <li><a href="consultarTematica.html">Consultas con temática</a></li>
+            <li><a href="datosTematicas.html">Consultar temática</a></li>
             <li><a href="consultarUsuarios.html">Consultar usuarios</a></li>
             <li><a href="menu.html">Menú principal</a></li>
         </ul>
