--- a/src/main/resources/templates/consultarUsuarios.html
+++ b/src/main/resources/templates/consultarUsuarios.html
@@ -12,8 +12,7 @@
     <ul>
         <li><a href="registrarTematica.html">Registrar temática</a></li>
         <li><a href="registrarTexto.html">Registrar texto</a></li>
-        <li><a href="consultarTematica.html">Consultas con temática</a></li>
-        <li><a href="datosTematicas.html">Consultar temática</a></li>
+        <li><a href="consultarTematica.html">Consultar temática</a></li>
         <li><a href="menu.html">Menú principal</a></li>
     </ul>
 </div>
