--- a/src/main/resources/templates/consultarTematica.html
+++ b/src/main/resources/templates/consultarTematica.html
@@ -79,6 +79,14 @@
         <button onclick="generarAudio()">Generar audios</button>
         <button onclick="enviarPDF()">Enviar PDF</button>
         <button onclick="mostrarAudio()">Reproducir audio</button>
+        <label for="format-select1">Seleccione el idioma que desea enviar el PDF:</label>
+        <select id="format-select1" name="format">
+            <option value="ingles">ingles</option>
+            <option value="frances">frances</option>
+            <option value="italiano">italiano</option>
+            <option value="español">español</option>
+            <option value="portugues">portugues</option>
+        </select>
 
     </div>
     <div><script src="scriptConsultarTematica.js"></script></div>
